--- a/frontend-antilles/src/App.css
+++ b/frontend-antilles/src/App.css
@@ -1,37 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=Roboto:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=Lato:wght@300;400;700;900&display=swap');
 
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
   position: relative;
   box-sizing: border-box;
-  background-color: #f8f8f8;
+  background-color: #fff;
 }
 
 *:before,
 *:after {
- box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-family: 'Crimson Text', serif;
   font-weight: 400;
+  margin: 0;
 }
 
 img {
   max-width: 100%;
 }
 
-a {
-  font-family: 'Roboto', sans-serif;
+a,
+p {
+  font-family: 'Lato', sans-serif;
   text-decoration: none;
 }
 
 ul {
   list-style-type: none;
 }
-
 
 .main-container {
   min-height: 100vh;
