small contact & about page finished

--- a/frontend-antilles/src/App.css
+++ b/frontend-antilles/src/App.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
   position: relative;
   box-sizing: border-box;
-  background-color: #fff;
+  background-color: #f8f9fa;
 }
 
 *:before,
