--- a/frontend-antilles/src/App.css
+++ b/frontend-antilles/src/App.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
   position: relative;
   box-sizing: border-box;
-  background-color: #f8f9fa;
+  background-color: #fff;
 }
 
 *:before,
@@ -22,7 +22,8 @@ h3 {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 a,
@@ -31,8 +32,11 @@ p {
   text-decoration: none;
 }
 
-ul {
+ul,
+li {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .main-container {
@@ -43,4 +47,19 @@ ul {
 
 .content-wrap {
   flex: 1;
+}
+
+.slidePage {
+  animation: slidePages 0.9s both;
+}
+
+@keyframes slidePages {
+  from {
+    opacity: 0;
+    transform: translateX(-120px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
