--- a/frontend-antilles/src/App.css
+++ b/frontend-antilles/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=Lato:wght@300;400;700;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600;800&display=swap'); */
 
 body {
   margin: 0;
@@ -13,11 +14,15 @@ body {
   box-sizing: border-box;
 }
 
-h1,
-h2,
-h3 {
+h1 {
   font-family: 'Crimson Text', serif;
   font-weight: 400;
+  margin: 0;
+}
+
+h2,
+h3 {
+  font-family: 'Lato', sans-serif;
   margin: 0;
 }
 
@@ -26,7 +31,8 @@ img {
 }
 
 a,
-p {
+p,
+span {
   font-family: 'Lato', sans-serif;
   text-decoration: none;
 }
@@ -38,13 +44,13 @@ li {
   margin: 0;
 }
 
-.main-container {
+.container {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
 
-.content-wrap {
+.content {
   flex: 1;
 }
 
