api with id filter & product page finished

--- a/frontend-antilles/src/App.css
+++ b/frontend-antilles/src/App.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=Lato:wght@300;400;700;900&display=swap');
-/* @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600;800&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,600;1,600&family=Lato:wght@400;700&display=swap');
 
 body {
   margin: 0;
@@ -15,7 +14,7 @@ body {
 }
 
 h1 {
-  font-family: 'Crimson Text', serif;
+  font-family: 'Cormorant Garamond', serif;
   font-weight: 400;
   margin: 0;
 }
@@ -35,6 +34,7 @@ p,
 span {
   font-family: 'Lato', sans-serif;
   text-decoration: none;
+  margin: 0;
 }
 
 ul,
